2005-06-22  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpcmds.c:
	    Slight change on "In SUBMISSION mode.." error message text.

	* smtpserver.c, smtpserver.h:
	    Log the port on which the connection arrived into.
	    It is somewhat difficult to make difference of SUBMISSION
	    and plain SMTP without it...

	* man/smtpserver.8.in, smtpserver/cfgread.c,
	  smtpserver/smtpauth.c, smtpserver/smtpserver.h,
	  smtpserver/smtpserver.c, proto/smtpserver.conf.in:
	    - PARAM no-smtp-auth-on-25
	    - PARAM smtp-auth-username-prompt "..."
	    - PARAM smtp-auth-password-prompt "..."

2005-06-20  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpauth.c:
	    Add  smtp_tarpit()  calls on auth-failures...

	* smtpserver/zpwmatch-pipe.c
	    Do socket (pipe) cleanup after calls to external authentication
	    program.

2005-06-17  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpcmds.c:
	    Log smtp-auth data into envelope meta-data so that external
	    hook programs can look into it.

2005-06-16  Matti Aarnio  <mea@zmailer.org>

	* man/smtpserver.8.in:
	    A bit more words about various aspects of the policy code.

2005-06-07  Matti Aarnio  <mea@zmailer.org>

	* man/router.8.in:
	    Add some words about 'relation' parameters, and auxiliary
	    configuration files for SleepyCat DB, and LDAP ...

	* transports/smtp/smtp.c:
	    Some very odd timeout handling things -- missed the need
	    for setting command timeout before each smtpwrite() call.
	    Indeed I suspect that pipelining needs a bit more complex
	    timeout level tracking...

2005-06-04  Matti Aarnio  <mea@zmailer.org>

	* transports/hold/hold.c:
	    Of course the 'hold age:nnn' had internal comparison wrong way..

2005-05-19  Matti Aarnio  <mea@zmailer.org>

	* router/libdb/ldap.c:
	    Indicate failure, if ldap session definition, or bind fails
	    in any way.

2005-05-09  Alex Kiernan <alex.kiernan@gmail.com>

	* sfio/src/lib/sfio/sfhdr.h: