@@ -1,3 +1,15 @@
+2005-06-23  Matti Aarnio  <mea@zmailer.org>
+
+	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,
+	  smtpserver/smtptls.c:
+	    Reworked the ungetc processing that recognizes, when
+	    Outlook is sending SSL crypto to port other than 25
+	    (and other than 465, a.k.a. SMTPS) where it should not.
+	    This is mainly for handling that braindead thing, when
+	    it happens at 587 a.k.a. SUBMISSION.
+	    (Once upon a time it worked, but not anymore..  now
+	    it works again..)
+
 2005-06-22  Matti Aarnio  <mea@zmailer.org>
 
 	* smtpserver/smtpcmds.c:
